# har-to-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
har_to_skill/: __main__.py
har_to_skill/scripts/: api_analyzer.py  har_parser.py  skill_generator.py
scripts/: api_analyzer.py  har_parser.py  security_scanner.py  skill_generator.py
tests/: conftest.py  test_api_analyzer.py  test_har_parser.py  test_integration.py  test_security_scanner.py  test_skill_generator.py
tests/fixtures/: lark-api.har  multiple-endpoints.har  noise-filter.har  simple-api.har
